--- a/package.json
+++ b/package.json
@@ -1,23 +1,35 @@
 {
   "name": "fem-product-preview-card",
   "version": "1.0.0",
-  "description": "![Design preview for the Product preview card component coding challenge](./design/desktop-preview.jpg)",
+  "description": "![Design preview for the Social media dashboard with theme switcher coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
-  "dependencies": {},
-  "devDependencies": {
-    "node-sass": "^7.0.1"
-  },
   "scripts": {
-    "compile:sass": "node-sass scss/main.scss style.css -w"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/fatlindshehu/fem--product-preview-card.git"
+    "url": "git+https://github.com/fatlindshehu/fem-social-media-dashboard-dark-light-toggle.git"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "bugs": {
-    "url": "https://github.com/fatlindshehu/fem--product-preview-card/issues"
+    "url": "https://github.com/fatlindshehu/fem-social-media-dashboard-dark-light-toggle/issues"
   },
-  "homepage": "https://github.com/fatlindshehu/fem--product-preview-card#readme"
+  "homepage": "https://github.com/fatlindshehu/fem-social-media-dashboard-dark-light-toggle#readme",
+  "dependencies": {
+    "@babel/core": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "autoprefixer": "^10.4.7",
+    "browser-sync": "^2.27.10",
+    "cssnano": "^5.1.12",
+    "dart-sass": "^1.25.0",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-terser": "^2.1.0",
+    "postcss": "^8.4.14",
+    "sass": "^1.53.0"
+  }
 }
